# wloc

./: .appveyor.yml  .bandit.yml  .gitignore  .travis.yml  Doxyfile  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tox.ini  wloc.py
.ci/: travis.json.enc
.github/: CONTRIBUTING.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml  question.yml
.github/workflows/: codeql.yml  python.yaml
.github/workflows/assets/: wloc_tests.json.gpg
docs/: README.md  android-installation.md  api-tokens.md  building-fedora-package.md  fedora-installation.md  pypi-installation.md  running-tests.md  system-installation.md  test-suite-file.md  using-application.md  using-library.md  virtualenv-installation.md  windows-installation.md
licenses/: pywifi.LICENSE.txt
package/: wloc.spec
packaging/assets/: manpage.md
packaging/fedora/: python-wloc.spec  wloc.spec
packaging/windows/: build.cmd
packaging/windows/assets/: version.txt  wloc.manifest
packaging/windows/inno/: wloc.iss
src/wloc/: __init__.py  exceptions.py  helpers.py
src/wloc/app/: __init__.py  run.py
tests/: __init__.py  library.py  test_library.py
wloc/: __init__.py  settings.py
wloc/app/: __init__.py  messages.py  run.py  settings.py  wloc.py
wloc/backend/: __init__.py
wloc/backends/: __init__.py
wloc/exception/: __init__.py
wloc/exceptions/: __init__.py
wloc/fetcher/: __init__.py  abstract.py  linux.py  windows.py
wloc/fetchers/: __init__.py
wloc/helpers/: __init__.py
(+47 files in other folders)
