# coding=utf-8

# SPDX-FileCopyrightText: 2015-2022 EasyCoding Team
#
# SPDX-License-Identifier: GPL-3.0-or-later

[project]
name = "wloc"
version = "1.0.1"
license = { text = "GPL-3.0-or-later" }
readme = "README.md"
dependencies = [
    "comtypes>=1.1.8; sys_platform == 'win32'",
    "dbus-python>=1.2.16; sys_platform == 'linux'",
    "python-networkmanager>=2.2; sys_platform == 'linux'",
    "requests>=2.22.0"
]
authors = [
    { name = "Vitaly Zaitsev", email="vitaly@easycoding.org" }
]
description = "Simple Wi-Fi geolocation library and tool"
keywords = [
    "api",
    "application",
    "geolocation",
    "google-geolocation",
    "library",
    "mozilla-geolocation",
    "tool",
    "wi-fi",
    "wi-fi-geolocation",
    "yandex-geolocation"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent"
]
requires-python = ">=3.6"

[project.urls]
homepage = "https://github.com/xvitaly/wloc"
documentation = "https://github.com/xvitaly/wloc/blob/master/docs/README.md"
repository = "https://github.com/xvitaly/wloc"

[project.scripts]
wloc = "wloc.app.run:main"

[project.optional-dependencies]
deploy = [
    "pyinstaller>=5.7.0"
]
test = [
    "tox>=3.27.0"
]

[build-system]
requires = [
    "setuptools>=62.0.0",
    "wheel>=0.37.0"
]
build-backend = "setuptools.build_meta"
